# schlockgame

./: CMakeLists.txt  Project2.sln
Project2/: Block.c  Block.h  Blocks.c  Blocks.h  CMakeLists.txt  Chunk.c  Chunk.h  Collision.c  Collision.h  Project2.vcxproj  Project2.vcxproj.filters  Stack.c  main.c
include/: Block.h  Blocks.h  Chunk.h  Display.h  Raycast.h  World.h  vec3.h
src/: Block.c  Blocks.c  Chunk.c  Display.c  Raycast.c  World.c  main.c  stb.c
